@@ -8,33 +8,28 @@ import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.Callback;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
-import uk.gov.hmcts.reform.civil.callback.CallbackType;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.service.SystemGeneratedDocumentService;
-import uk.gov.hmcts.reform.civil.service.docmosis.sealedclaim.SealedClaimLipResponseFormGenerator;
+import uk.gov.hmcts.reform.civil.service.docmosis.draft.DraftClaimFormGenerator;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GENERATE_RESPONSE_CUI_SEALED;
+import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GENERATE_DRAFT_FORM;
 
 @Service
 @RequiredArgsConstructor
-public class GenerateCUIResponseSealedFormCallBackHandler extends CallbackHandler {
+public class GenerateDraftClaimFormCallBackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_RESPONSE_CUI_SEALED);
-
+    private static final List<CaseEvent> EVENTS = List.of(GENERATE_DRAFT_FORM);
+    private final Map<String, Callback> callbackMap = Map.of(callbackKey(ABOUT_TO_SUBMIT), this::generateDraftPdfForm);
     private final ObjectMapper objectMapper;
-    private final SealedClaimLipResponseFormGenerator formGenerator;
+    private final DraftClaimFormGenerator draftClaimFormGenerator;
     private final SystemGeneratedDocumentService systemGeneratedDocumentService;
-
-    private final Map<String, Callback> callbackMap = Map.of(
-        callbackKey(CallbackType.ABOUT_TO_SUBMIT), this::prepareSealedForm
-    );
 
     @Override
     protected Map<String, Callback> callbacks() {
@@ -46,21 +41,18 @@ public class GenerateCUIResponseSealedFormCallBackHandler extends CallbackHandle
         return EVENTS;
     }
 
-    private CallbackResponse prepareSealedForm(CallbackParams callbackParams) {
-
-        CaseDocument sealedForm = formGenerator.generate(
-            callbackParams.getCaseData(),
-            callbackParams.getParams().get(BEARER_TOKEN).toString()
-        );
-        CaseData updatedCaseData = callbackParams.getCaseData().toBuilder()
-            .respondent1ClaimResponseDocumentSpec(sealedForm)
+    private CallbackResponse generateDraftPdfForm(CallbackParams callbackParams) {
+        CaseData caseData = callbackParams.getCaseData();
+        CaseDocument sealedForm = draftClaimFormGenerator.generate(caseData, callbackParams.getParams().get(BEARER_TOKEN).toString());
+        CaseData updatedCaseData = caseData.toBuilder()
             .systemGeneratedCaseDocuments(systemGeneratedDocumentService.getSystemGeneratedDocumentsWithAddedDocument(
                 sealedForm,
-                callbackParams.getCaseData()
+                caseData
             ))
             .build();
         return AboutToStartOrSubmitCallbackResponse.builder()
             .data(updatedCaseData.toMap(objectMapper))
             .build();
     }
+
 }
